// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(1) Default render - With data. 1`] = `
<div
  className="profile-communities"
>
  <h2>
    Membership
  </h2>
  <div
    className="sort-dropdown"
  >
    <div>
      <div
        className="amount-actions"
      >
        <span
          className="sort-svg"
        >
          <svg
            className="bi bi-sort-down-alt"
            color="#357ce6"
            fill="currentColor"
            height="20"
            viewBox="0 0 16 16"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.5 3.5a.5.5 0 0 0-1 0v8.793l-1.146-1.147a.5.5 0 0 0-.708.708l2 1.999.007.007a.497.497 0 0 0 .7-.006l2-2a.5.5 0 0 0-.707-.708L3.5 12.293V3.5zm4 .5a.5.5 0 0 1 0-1h1a.5.5 0 0 1 0 1h-1zm0 3a.5.5 0 0 1 0-1h3a.5.5 0 0 1 0 1h-3zm0 3a.5.5 0 0 1 0-1h5a.5.5 0 0 1 0 1h-5zM7 12.5a.5.5 0 0 0 .5.5h7a.5.5 0 0 0 0-1h-7a.5.5 0 0 0-.5.5z"
            />
          </svg>
           
        </span>
        <div
          className="custom-dropdown float-top"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            className="dropdown-btn"
          >
            <div
              className="label"
            >
              Sort
            </div>
            <div
              className="menu-down"
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M7,10L12,15L17,10H7Z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <ul
    className="community-list"
  >
    <li>
      <a
        href="/created/hive-125125"
        onClick={[Function]}
        title="Unmoderated topics"
      >
        Ecency
      </a>
       
      <span
        className="user-role"
      >
        admin
      </span>
    </li>
    <li>
      <a
        href="/created/hive-139531"
        onClick={[Function]}
        title="Unmoderated topics"
      >
        HiveDevs
      </a>
       
      <span
        className="user-role"
      >
        mod
      </span>
    </li>
    <li>
      <a
        href="/created/hive-102930"
        onClick={[Function]}
        title="Unmoderated topics"
      >
        Hive Improvement
      </a>
       
      <span
        className="user-role"
      >
        guest
      </span>
    </li>
  </ul>
</div>
`;

exports[`(2) Should show create community link 1`] = `
<div
  className="profile-communities"
>
  <h2>
    Membership
  </h2>
  <div
    className="sort-dropdown"
  >
    <div>
      <div
        className="amount-actions"
      >
        <span
          className="sort-svg"
        >
          <svg
            className="bi bi-sort-down-alt"
            color="#357ce6"
            fill="currentColor"
            height="20"
            viewBox="0 0 16 16"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M3.5 3.5a.5.5 0 0 0-1 0v8.793l-1.146-1.147a.5.5 0 0 0-.708.708l2 1.999.007.007a.497.497 0 0 0 .7-.006l2-2a.5.5 0 0 0-.707-.708L3.5 12.293V3.5zm4 .5a.5.5 0 0 1 0-1h1a.5.5 0 0 1 0 1h-1zm0 3a.5.5 0 0 1 0-1h3a.5.5 0 0 1 0 1h-3zm0 3a.5.5 0 0 1 0-1h5a.5.5 0 0 1 0 1h-5zM7 12.5a.5.5 0 0 0 .5.5h7a.5.5 0 0 0 0-1h-7a.5.5 0 0 0-.5.5z"
            />
          </svg>
           
        </span>
        <div
          className="custom-dropdown float-top"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            className="dropdown-btn"
          >
            <div
              className="label"
            >
              Sort
            </div>
            <div
              className="menu-down"
            >
              <svg
                viewBox="0 0 24 24"
              >
                <path
                  d="M7,10L12,15L17,10H7Z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <ul
    className="community-list"
  >
    <li>
      <a
        href="/created/hive-125125"
        onClick={[Function]}
        title="Unmoderated topics"
      >
        Ecency
      </a>
       
      <span
        className="user-role"
      >
        admin
      </span>
    </li>
    <li>
      <a
        href="/created/hive-139531"
        onClick={[Function]}
        title="Unmoderated topics"
      >
        HiveDevs
      </a>
       
      <span
        className="user-role"
      >
        mod
      </span>
    </li>
    <li>
      <a
        href="/created/hive-102930"
        onClick={[Function]}
        title="Unmoderated topics"
      >
        Hive Improvement
      </a>
       
      <span
        className="user-role"
      >
        guest
      </span>
    </li>
  </ul>
  <p>
    <a
      className="create-link"
      href="/communities/create"
      onClick={[Function]}
    >
      Create a community
    </a>
  </p>
</div>
`;
